# ShipSmart-API

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
app/: main.py  mcp_server.py
app/api/routes/: advisor.py  compare.py  health.py  info.py  orchestration.py  rag.py
app/core/: cache.py  config.py  correlation.py  errors.py  logging.py  middleware.py  rate_limit.py
app/dependencies/: __init__.py
app/llm/: client.py  prompts.py  router.py
app/providers/: __init__.py
app/rag/: __init__.py  chunking.py  embeddings.py  ingestion.py  mcp_vector_store.py  pgvector_store.py  retrieval.py  vector_store.py
app/schemas/: __init__.py  advisor.py  compare.py
app/services/: __init__.py  compare_service.py  java_client.py  mcp_client.py  orchestration_service.py  rag_service.py  recommendation_service.py  shipping_advisor_service.py  tracking_advisor_service.py
data/documents/carriers/: carrier-info.txt  dhl-overview.md  fedex-overview.md  ups-overview.md  usps-overview.md
data/documents/guides/: address-quality.md  ground-vs-express.md  packaging-best-practices.md  shipping-faq.md
data/documents/policies/: carrier-comparison.md  international-shipping-basics.md  returns-and-claims.md
data/documents/scenarios/: delays-and-exceptions.md  recommendation-tradeoffs.md
scripts/: perf_check.py
tests/: conftest.py  test_advisor.py  test_advisor_services.py  test_cache.py  test_chunking.py  test_config.py  test_errors.py  test_failure_scenarios.py  test_health.py  test_info.py  test_integration_full_flow.py  test_llm_factory.py  test_llm_router.py  test_orchestration.py  test_provider_factory.py  test_rag.py  test_rag_expanded.py  test_vector_store.py
