[project]
name = "shipsmart-api-python"
version = "0.1.0"
description = "ShipSmart FastAPI — AI/orchestration service"
requires-python = ">=3.13"
dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────
    "fastapi==0.135.3",
    "uvicorn[standard]>=0.34.0",

    # ── Config management ──────────────────────────────────────────────────
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.0",

    # ── HTTP client (for calling Java API or external services) ───────────
    "httpx>=0.28.0",

    # ── AI / RAG ──────────────────────────────────────────────────────────
    "numpy>=2.0.0",
    "openai>=1.60.0",
    "anthropic>=0.40.0",

    # ── Persistent vector store (pgvector via Postgres) ───────────────────
    "asyncpg>=0.30.0",

    # ── Rate limiting ─────────────────────────────────────────────────────
    "slowapi>=0.1.9",

    # ── Supabase (optional — for direct DB access if needed) ──────────────
    # TODO: Uncomment if FastAPI needs direct Supabase access.
    # Primary DB access should be via the Java API to preserve service boundaries.
    # "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
